# CensusTransform

./: CMakeLists.txt  census_transform  census_transform.c  census_transform.h  main.c  main.cpp  output-census.pgm  referencia.py
